<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">GSCel</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="nome">Nome</string>
    <string name="telefone">Telefone</string>
    <string name="datanascimento">Data de Nascimento</string>
    <string name="encargo">Encargo</string>
    <string name="cadastro">Cadastro</string>
    <string name="gravar">Gravar</string>
    <string name="title_activity_lista_membros">ListaMembrosActivity</string>
    <string name="title_activity_formulario_membro">FormularioMembroActivity</string>
    <string name="fotoDoMembro">Foto do Membro</string>
    <string name="title_activity_lista_meses_relatorio">ListaMesesRelatorioActivity</string>
    <string name="title_activity_formulario_relatorio">FormularioRelatorioActivity</string>
    <string name="dataCelula">Data da Reunião</string>
    <string name="membroRelatorio">Membros</string>
    <string name="faRelatorio">Freq. Assíduo</string>
    <string name="visitanteRelatorio">Visitantes</string>

</resources>