<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context=".FormularioRelatorioActivity" >

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dataCelula" />

    <Button
        android:id="@+id/dataReuniaoBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="" />
    
    <TextView
        android:id="@+id/membroRelatorioTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/membroRelatorio" />

    <EditText
        android:id="@+id/membroRelatorioEdt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number" >

        <requestFocus />
    </EditText>
    
    <TextView
        android:id="@+id/faRelatorioTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/faRelatorio" />

    <EditText
        android:id="@+id/faRelatorioEdt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number" >        
    </EditText>
    
    <TextView
        android:id="@+id/visitanteRelatorioTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/visitanteRelatorio" />
    <EditText
        android:id="@+id/visitanteRelatorioEdt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number" >        
    </EditText>
    
    <Button
        android:id="@+id/gravarRelatorioBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/gravar" />

</LinearLayout>